--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "bandsintown": "^1.0.1",
     "dotenv": "^6.0.0",
+    "moment": "^2.22.2",
+    "node-spotify-api": "^1.0.7",
     "omdb": "^0.8.0",
     "request": "^2.88.0",
     "spotify-web-api-js": "^1.1.0"
